Correction text-overflow width:320px

--- a/src/sass/base/_global-typography.scss
+++ b/src/sass/base/_global-typography.scss
@@ -122,12 +122,7 @@ footer{
 }
 
 //---------------------------LOADER
-.loaderneutral{
-  font-size: 4.8rem;
-  line-height: 4.8rem;
-}
-
-.loaderactive{
+.loaderneutral, .loaderactive{
   font-size: 4.8rem;
   line-height: 4.8rem;
 }
