--- a/src/sass/components/_card__menu.scss
+++ b/src/sass/components/_card__menu.scss
@@ -30,9 +30,25 @@
       padding-left: 0.5rem;
     }
 
-    .menu__dish--description p{
-      width: 22rem ;
+    .menu__dish--description h5 {
+      @media (max-width:374.97px){
+        overflow: hidden;
+        white-space:nowrap;
+        text-overflow: ellipsis;
+        width: 26rem;
+      }
+      @media (min-width:374.98px){
+        width: 100%;
+      }
+    }
 
+    .menu__dish--description p{
+      @media (max-width:374.97px){
+        overflow: hidden;
+        white-space:nowrap;
+        text-overflow: ellipsis;
+        width: 22rem;
+      }
       @media (min-width:374.98px){
         width: 100%;
       }
